readme + screenshots + a fix inside bot_config

--- a/app/config/bot_config.json
+++ b/app/config/bot_config.json
@@ -1,6 +1,6 @@
 {
     "token":"BOT_TOKEN_GOES_HERE",
-    "mainChannel":"470685004599525402",
+    "mainChannel":"CHANNEL",
     "historyDir":"",
     "refreshListRate":"10000"
 }
